<resources>
    <string name="app_name">IReport</string>
    <string name="nav_drawer_open">Open navigation drawer</string>
    <string name="nav_drawer_close">Close navigation drawer</string>
    <string name="nav_drawer_add">Add Report/Feedback</string>
    <string name="nav_drawer_view">View My Reports</string>
    <string name="nav_drawer_logout">Logout</string>
    <string name="nav_drawer_instructions">Instructions</string>
    <string name="nav_drawer_view_profile">Profile</string>
    <string name="about">About</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="action_settings">Settings</string>

    <string-array name="action_entries">
        <item>Report an Issue</item>
        <item>Provide Feedback</item>
    </string-array>
    <string-array name="gov_agencies">
        <item>COMELEC</item>
        <item>LTFRB</item>
        <item>DSWD</item>
    </string-array>

    <string name="title_activity_add_report">AddReport</string>
    <string name="title_activity_view_report">ViewReport</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_instructions">InstructionsActivity</string>
    <string name="title_text">Google Sign-In\nQuickstart</string>

    <!-- Sign-in status messages -->
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signed_in">Signed in</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_out">Signed out</string>
    <string name="signed_in_err">"Error: please check logs."</string>
        <string name="error_null_person">
            Error: Plus.PeopleApi.getCurrentPerson returned null. Ensure that the Google+ API is
            enabled for your project, you have a properly configured google-services.json file
            and that your device has an internet connection.
        </string>
    <string name="loading">Loading…</string>
    <string name="auth_code_fmt">Auth Code: %s</string>
    <string name="id_token_fmt">ID Token: %s</string>

    <!-- Google Play Services error for Toast -->
    <string name="play_services_error_fmt">Google Play Services Error: %i</string>

    <!-- Button labels -->
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>

    <!-- Content Description for images -->
    <string name="desc_google_icon">Google Logo</string>

    <!-- Rationale for asking for Contacts -->
    <string name="contacts_permission_rationale">Contacts access is needed in order to retrieve your email address.</string>

    <!-- Activity Names and Descriptions -->
    <string name="name_sign_in_activity">SignInActivity</string>
    <string name="desc_sign_in_activity">Signing in, signing out, and revoking access.</string>
    <string name="desc_sign_in_activity_scopes">Signing in, signing out, and revoking access with Google Drive permissions.</string>
    <string name="name_id_token_activity">IdTokenActivity</string>
    <string name="desc_id_token_activity">Retrieving an ID Token for the user.</string>
    <string name="desc_auth_code_activity">Demonstrate retrieving an auth code for authorizing your server.</string>
    <string name="name_auth_code_activity">ServerAuthCodeActivity</string>

    <string name="go_to_dashboard">Go to Home</string>
    <string name="title">TITLE: </string>
    <string name="description">DESCRIPTION: </string>
    <string name="date">DATE: </string>
    <string name="time">TIME: </string>
    <string name="location">LOCATION: </string>
    <string name="send">Send</string>


    <string name="no_address_found">No Address found. </string>
    <string name="invalid_lat_long_used">Invalid Lat_lng used </string>
    <string name="address_found">Address found. </string>
    <string name="attach_image">Capture Image </string>


    <string name="service_not_available">Location Service not available: </string>

    <!-- TODO(user): replace with your real server client ID -->
    <!-- Server Client ID.  This should be a valid Web OAuth 2.0 Client ID obtained
         from https://console.developers.google.com/ -->
    <string name="server_client_id">YOUR_SERVER_CLIENT_ID</string>
</resources>

