<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="hackaton.android.com.ireport.AddReport"
        tools:showIn="@layout/activity_add_report">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_report"
            android:id="@+id/textView3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/title"
            android:id="@+id/txtTitle"
            android:layout_marginTop="41dp"
            android:drawableLeft="@drawable/ic_turned_in_not_24dp"
            android:drawablePadding="5dp"
            android:layout_below="@+id/textView3"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/description"
            android:id="@+id/txtDescription"
            android:layout_below="@+id/txtTitle"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="47dp"
            android:drawableLeft="@drawable/ic_insert_comment_24dp"
            android:drawablePadding="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/date"
            android:id="@+id/textView2"
            android:layout_marginTop="29dp"
            android:layout_below="@+id/editText2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:drawableLeft="@drawable/ic_event_note_24dp"
            android:drawablePadding="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/location"
            android:id="@+id/textView4"
            android:drawableLeft="@drawable/ic_pin_drop_24dp"
            android:drawablePadding="5dp"
            android:layout_marginTop="28dp"
            android:layout_below="@+id/txtTime"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editText"
            android:layout_below="@+id/txtTitle"
            android:layout_alignLeft="@+id/editText2"
            android:layout_alignStart="@+id/editText2"
            android:layout_alignRight="@+id/editText2"
            android:layout_alignEnd="@+id/editText2" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/editText2"
            android:layout_below="@+id/txtDescription"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignLeft="@+id/textView6"
            android:layout_alignStart="@+id/textView6" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="11/11/11"
            android:id="@+id/txtDate"
            android:textColor="#1d9de7"
            android:layout_alignTop="@+id/textView2"
            android:layout_alignLeft="@+id/txtTime"
            android:layout_alignStart="@+id/txtTime" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="11:00:00 AM"
            android:id="@+id/txtTime"
            android:textColor="#1d9de7"
            android:layout_marginTop="27dp"
            android:layout_below="@+id/txtDate"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Ayala"
            android:id="@+id/txtLocation"
            android:textColor="#1d9de7"
            android:layout_below="@+id/textView4"
            android:layout_alignRight="@+id/editText2"
            android:layout_alignEnd="@+id/editText2"
            android:layout_toRightOf="@+id/textView6"
            android:layout_toEndOf="@+id/textView6" />

        <ImageView
            android:layout_width="121dp"
            android:layout_height="162dp"
            android:id="@+id/imageView"
            android:layout_gravity="center"
            android:src="@drawable/ic_photo_camera_24dp"
            android:layout_below="@+id/txtLocation"
            android:layout_alignLeft="@+id/textView6"
            android:layout_alignStart="@+id/textView6" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/attach_image"
            android:id="@+id/textView5"
            android:layout_alignBottom="@+id/imageView"
            android:layout_toRightOf="@+id/textView3"
            android:layout_toEndOf="@+id/textView3"
            android:layout_marginBottom="64dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/time"
            android:id="@+id/textView6"
            android:drawableLeft="@drawable/ic_event_note_24dp"
            android:drawablePadding="5dp"
            android:layout_above="@+id/textView4"
            android:layout_alignRight="@+id/txtTitle"
            android:layout_alignEnd="@+id/txtTitle" />

        <Button
            android:id="@+id/sign_out_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/send"
            android:theme="@style/ThemeOverlay.MyDarkButton"
            android:layout_below="@+id/textView5"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>
</ScrollView>